fix #834: Horizontally aligned header stats items in safari.

--- a/frontend/style/misago/page-header.less
+++ b/frontend/style/misago/page-header.less
@@ -124,6 +124,7 @@
   margin-bottom: 0px;
   margin-right: 8px;
   overflow: auto;
+  vertical-align: top; // fix #834
 
   .status-icon {
     width: 18px;
